# hj_blog

./: .gitignore  README.md  pyproject.toml
hjblog/: __init__.py  admin_management.py  auxiliaries.py  db.py  globals.py  schema.sql
hjblog/bps/auth/: forms.py  routes.py
hjblog/bps/errors/: handlers.py
hjblog/bps/general_auxiliaries/: auxiliaries.py
hjblog/bps/main/: globals.py  helpers.py  routes.py
hjblog/bps/user_actions/: auxiliaries.py  forms.py  routes.py
hjblog/bps/user_profile/: auxiliaries.py  forms.py  routes.py
hjblog/static/: style.css
hjblog/templates/: base_layout.html  layout.html
hjblog/templates/auth/: login.html  register.html  verification.html  verification_with_2fa.html
hjblog/templates/errors/: 400.html  401.html  403.html  404.html  500.html
hjblog/templates/includes/: modal_delete_comment.html  modal_delete_post.html
hjblog/templates/main/: blog.html  index.html
hjblog/templates/user_actions/: all_comments.html  comment_post.html  new_post.html  visit_post.html  weather.html
hjblog/templates/user_profile/: change_city.html  change_email.html  change_password.html  change_picture.html  change_username.html  delete_account.html  delete_account_2fa.html  manage_profile.html  setup-2fa.html
tests/: auxiliaries.py  conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_main.py  test_user_actions.py  test_user_profile.py
